--- a/resume.html
+++ b/resume.html
@@ -14,10 +14,8 @@
 <body>
   <div class="container">
     <div class="sidebar">
-      <header>
-        <h1>闵皆佩</h1>
-        <h2>前端工程师</h2>
-      </header>
+      <img src="avatar.jpg" alt="avatar-vicky">
+      <h1>闵皆佩</h1>
       <ul class="sidebar-info">
         <li>
           <dl class="sidebar-info-item">
@@ -26,6 +24,12 @@
             <dd><i class="fa fa-envelope"></i><a href="mailto:minjiepei@gmail.com">minjiepei@gmail.com</a></dd>
             <dd><i class="fa fa-weixin"></i><span>minjiepei2</span></dd>
             <dd><i class="fa fa-github-square"></i><a href="https://github.com/vickymin" target="_blank">vickymin</a></dd>
+          </dl>
+        </li>
+        <li>
+          <dl class="sidebar-info-item">
+            <dt>应聘职位</dt>
+            <dd><i class="fa fa-plug"></i>前端工程师</dd>
           </dl>
         </li>
         <li>
@@ -69,7 +73,7 @@
         </dl>
       <h2>工作经历</h2>
       <dl class="main-item">
-        <i class="fa fa-cog"></i><dt>卢森康卓汽车技术咨询（上海）有限公司</dt>
+        <i class="fa fa-cog"></i><dt>卢森康卓汽车技术咨询（上海）有限公司（2014.6 - 2015.8）</dt>
         <dd>
           <p>主持公司例会，并做会议记录</p>
           <p>员工报销，发票整理，办公用品采购</p>
@@ -83,14 +87,14 @@
         <dd>
           <p></p>
         </dd>
-        <i class="fa fa-star"></i><dt>JavaScript</dt>
+        <i class="fa fa-tag"></i><dt>JavaScript / jQuery</dt>
         <dd>
           <p></p>
           <p>了解jQuery的使用</p>
         </dd>
-        <i class="fa fa-star"></i><dt>HTML/CSS</dt>
+        <i class="fa fa-tag"></i><dt>其他</dt>
         <dd>
-          <p></p>
+          <p>熟悉git，日常使用Atom+Chrome</p>
         </dd>
       </dl>
     </div>
