--- a/resume.html
+++ b/resume.html
@@ -22,7 +22,6 @@
             <dt>联系方式</dt>
             <dd><i class="fa fa-phone"></i><span>15921434749</span></dd>
             <dd><i class="fa fa-envelope"></i><a href="mailto:minjiepei@gmail.com">minjiepei@gmail.com</a></dd>
-            <dd><i class="fa fa-weixin"></i><span>minjiepei2</span></dd>
             <dd><i class="fa fa-github-square"></i><a href="https://github.com/vickymin" target="_blank">vickymin</a></dd>
           </dl>
         </li>
@@ -46,9 +45,18 @@
     <div class="main">
       <h2>项目信息</h2>
         <dl class="main-item">
+          <i class="fa fa-star"></i><dt>短时信息存储</dt>
+          <dd>
+            <p></p>
+            <p>
+              <a href="" class="main-item-link" target="_blank">Code</a>
+              <a href="" class="main-item-link" target="_blank">Demo</a>
+            <p>
+          </dd>
           <i class="fa fa-star"></i><dt>知乎仿写</dt>
           <dd>
             <p>仿照知乎的静态页面，实现了登录/注册界面，及首页的部分界面</p>
+            <p></p>
             <p>
               <a href="https://github.com/vickymin/zhihu" class="main-item-link" target="_blank">Code</a>
               <a href="http://minjiepei.com/zhihu" class="main-item-link" target="_blank">Demo</a>
@@ -85,16 +93,17 @@
       <dl class="main-item">
         <i class="fa fa-tag"></i><dt>HTML / CSS</dt>
         <dd>
-          <p></p>
+          <p>根据设计稿实现页面，编写语义化的HTML</p>
+          <p>了解CSS3的新特性，能够实现较复杂布局，有一定审美</p>
         </dd>
         <i class="fa fa-tag"></i><dt>JavaScript / jQuery</dt>
         <dd>
-          <p></p>
-          <p>了解jQuery的使用</p>
+          <p>了解原生JavaScript，对jQuery无依赖</p>
         </dd>
         <i class="fa fa-tag"></i><dt>其他</dt>
         <dd>
-          <p>熟悉git，日常使用Atom+Chrome</p>
+          <p>熟悉基本的git操作，日常使用Atom+Chrome</p>
+          <p>能用Photoshop进行切图</p>
         </dd>
       </dl>
     </div>
