--- a/resume.html
+++ b/resume.html
@@ -47,7 +47,7 @@
         <dl class="main-item">
           <i class="fa fa-star"></i><dt>短时信息存储</dt>
           <dd>
-            <p></p>
+            <p>一个简易的信息存储平台,支持多终端使用express实现</p>
             <p>
               <a href="" class="main-item-link" target="_blank">Code</a>
               <a href="" class="main-item-link" target="_blank">Demo</a>
@@ -103,7 +103,8 @@
         <i class="fa fa-tag"></i><dt>其他</dt>
         <dd>
           <p>熟悉基本的git操作，日常使用Atom+Chrome</p>
-          <p>能用Photoshop进行切图</p>
+          <p>会使用Grunt辅助开发</p>
+          <p>会使用Photoshop进行切图</p>
         </dd>
       </dl>
     </div>
