--- a/resume.html
+++ b/resume.html
@@ -47,7 +47,8 @@
         <dl class="main-item">
           <i class="fa fa-star"></i><dt>短时信息存储</dt>
           <dd>
-            <p>一个简易的信息存储平台,支持多终端使用express实现</p>
+            <p>一个简易的信息存储平台，支持多终端使用</p>
+            <p>express实现后端，用到了多个小插件以提升用户体验</p>
             <p>
               <a href="" class="main-item-link" target="_blank">Code</a>
               <a href="" class="main-item-link" target="_blank">Demo</a>
@@ -56,7 +57,7 @@
           <i class="fa fa-star"></i><dt>知乎仿写</dt>
           <dd>
             <p>仿照知乎的静态页面，实现了登录/注册界面，及首页的部分界面</p>
-            <p></p>
+            <p>参照了知乎的布局，使用Grunt辅助开发</p>
             <p>
               <a href="https://github.com/vickymin/zhihu" class="main-item-link" target="_blank">Code</a>
               <a href="http://minjiepei.com/zhihu" class="main-item-link" target="_blank">Demo</a>
@@ -64,7 +65,8 @@
           </dd>
           <i class="fa fa-star"></i><dt>井字棋游戏</dt>
           <dd>
-            <p>含单人和双人对战两种模式</p>
+            <p>含单人和双人对战两种模式，</p>
+            <p>后续计划完成AI部分</p>
             <p>
               <a href="https://github.com/vickymin/tictactoe" class="main-item-link" target="_blank">Code</a>
               <a href="http://minjiepei.com/tictactoe" class="main-item-link" target="_blank">Demo</a>
@@ -72,7 +74,8 @@
           </dd>
           <i class="fa fa-star"></i><dt>动态方格生成</dt>
           <dd>
-            <p>根据输入生成n*n的方格，点击每个方格会console出对应数字，用canvas实现</p>
+            <p>canvas小练习</p>
+            <p>根据输入生成n*n的方格，点击每个方格会console出对应数字</p>
             <p>
               <a href="https://github.com/vickymin/js-projects/tree/vickymin/101-clickable-grid" class="main-item-link" target="_blank">Code</a>
               <a href="http://minjiepei.com/js-projects/101-clickable-grid/" class="main-item-link" target="_blank">Demo</a>
@@ -94,9 +97,9 @@
         <i class="fa fa-tag"></i><dt>HTML / CSS</dt>
         <dd>
           <p>根据设计稿实现页面，编写语义化的HTML</p>
-          <p>了解CSS3的新特性，能够实现较复杂布局，有一定审美</p>
+          <p>能够实现较复杂布局，有一定审美，了解Sass</p>
         </dd>
-        <i class="fa fa-tag"></i><dt>JavaScript / jQuery</dt>
+        <i class="fa fa-tag"></i><dt>JavaScript</dt>
         <dd>
           <p>了解原生JavaScript，对jQuery无依赖</p>
         </dd>
@@ -105,6 +108,7 @@
           <p>熟悉基本的git操作，日常使用Atom+Chrome</p>
           <p>会使用Grunt辅助开发</p>
           <p>会使用Photoshop进行切图</p>
+          <p>略懂Java和Python</p>
         </dd>
       </dl>
     </div>
