--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <dt>联系方式</dt>
             <dd><i class="fa fa-phone"></i><span>15921434749</span></dd>
             <dd><i class="fa fa-envelope"></i><a href="mailto:minjiepei@gmail.com">minjiepei@gmail.com</a></dd>
-            <dd><i class="fa fa-github-square"></i><a href="https://github.com/vickymin" target="_blank">vickymin</a></dd>
+            <dd><i class="fa fa-github-square"></i><a href="https://github.com/vickymin" target="_blank">github.com/vickymin</a></dd>
           </dl>
         </li>
         <li>
@@ -50,8 +50,8 @@
             <p>一个简易的信息存储平台，支持多终端使用</p>
             <p>express实现后端，用到了多个小插件以提升用户体验</p>
             <p>
-              <a href="" class="main-item-link" target="_blank">Code</a>
-              <a href="" class="main-item-link" target="_blank">Demo</a>
+              <a href="120.26.199.177" class="main-item-link" target="_blank">Code</a>
+              <a href="https://github.com/vickymin/save-message" class="main-item-link" target="_blank">Demo</a>
             <p>
           </dd>
           <i class="fa fa-star"></i><dt>知乎仿写</dt>
@@ -59,14 +59,13 @@
             <p>仿照知乎的静态页面，实现了登录/注册界面，及首页的部分界面</p>
             <p>参照了知乎的布局，使用Grunt辅助开发</p>
             <p>
-              <a href="https://github.com/vickymin/zhihu" class="main-item-link" target="_blank">Code</a>
-              <a href="http://minjiepei.com/zhihu" class="main-item-link" target="_blank">Demo</a>
+              <a href="https://github.com/vickymin/save-message" class="main-item-link" target="_blank">Code</a>
+              <a href="http://save.minjiepei.com" class="main-item-link" target="_blank">Demo</a>
             <p>
           </dd>
           <i class="fa fa-star"></i><dt>井字棋游戏</dt>
           <dd>
-            <p>含单人和双人对战两种模式，</p>
-            <p>后续计划完成AI部分</p>
+            <p>含单人和双人对战两种模式，后续计划完成AI部分</p>
             <p>
               <a href="https://github.com/vickymin/tictactoe" class="main-item-link" target="_blank">Code</a>
               <a href="http://minjiepei.com/tictactoe" class="main-item-link" target="_blank">Demo</a>
@@ -74,8 +73,8 @@
           </dd>
           <i class="fa fa-star"></i><dt>动态方格生成</dt>
           <dd>
-            <p>canvas小练习</p>
             <p>根据输入生成n*n的方格，点击每个方格会console出对应数字</p>
+            <p>用canvas实现</p>
             <p>
               <a href="https://github.com/vickymin/js-projects/tree/vickymin/101-clickable-grid" class="main-item-link" target="_blank">Code</a>
               <a href="http://minjiepei.com/js-projects/101-clickable-grid/" class="main-item-link" target="_blank">Demo</a>
@@ -105,7 +104,7 @@
         </dd>
         <i class="fa fa-tag"></i><dt>其他</dt>
         <dd>
-          <p>熟悉基本的git操作，日常使用Atom+Chrome</p>
+          <p>熟悉基本的git操作，日常使用Atom</p>
           <p>会使用Grunt辅助开发</p>
           <p>会使用Photoshop进行切图</p>
           <p>略懂Java和Python</p>
