--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <p>一个简易的信息存储平台，支持多终端使用</p>
             <p>express实现后端，用到了多个小插件以提升用户体验</p>
             <p>
-              <a href="120.26.199.177" class="main-item-link" target="_blank">Code</a>
+              <a href="http://120.26.199.177" class="main-item-link" target="_blank">Code</a>
               <a href="https://github.com/vickymin/save-message" class="main-item-link" target="_blank">Demo</a>
             <p>
           </dd>
