--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
   <meta name="description" content="闵皆佩 - 个人简历（前端工程师）">
   <meta name="keywords" content="前端,简历,上海">
   <meta name="author" content="vickymin,minjiepei@gmail.com">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport">
   <link rel="stylesheet" type="text/css" href="css/font-awesome/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <title>闵皆佩 - 个人简历</title>
@@ -50,8 +50,8 @@
             <p>一个简易的信息存储平台，支持多终端使用</p>
             <p>express实现后端，用到了多个小插件以提升用户体验</p>
             <p>
-              <a href="http://120.26.199.177" class="main-item-link" target="_blank">Code</a>
-              <a href="https://github.com/vickymin/save-message" class="main-item-link" target="_blank">Demo</a>
+              <a href="https://github.com/vickymin/save-message" class="main-item-link" target="_blank">Code</a>
+              <a href="http://120.26.199.177" class="main-item-link" target="_blank">Demo</a>
             <p>
           </dd>
           <i class="fa fa-star"></i><dt>知乎仿写</dt>
@@ -96,7 +96,7 @@
         <i class="fa fa-tag"></i><dt>HTML / CSS</dt>
         <dd>
           <p>根据设计稿实现页面，编写语义化的HTML</p>
-          <p>能够实现较复杂布局，有一定审美，了解Sass</p>
+          <p>能够实现较复杂布局，有一定审美，了解Bootstrap，Sass</p>
         </dd>
         <i class="fa fa-tag"></i><dt>JavaScript</dt>
         <dd>
