--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="author" content="vickymin,minjiepei@gmail.com">
   <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport">
   <link rel="stylesheet" type="text/css" href="css/font-awesome/css/font-awesome.min.css">
-  <link rel="stylesheet" type="text/css" href="css/style.min.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
   <title>闵皆佩 - 个人简历</title>
 </head>
 <body>
@@ -59,8 +59,8 @@
             <p>仿照知乎的静态页面，实现了登录/注册界面，及首页的部分界面</p>
             <p>参照了知乎的布局，使用Grunt辅助开发</p>
             <p>
-              <a href="https://github.com/vickymin/save-message" class="main-item-link" target="_blank">Code</a>
-              <a href="http://save.minjiepei.com" class="main-item-link" target="_blank">Demo</a>
+              <a href="https://github.com/vickymin/zhihu" class="main-item-link" target="_blank">Code</a>
+              <a href="http://minjiepei.com/zhihu" class="main-item-link" target="_blank">Demo</a>
             <p>
           </dd>
           <i class="fa fa-star"></i><dt>井字棋游戏</dt>
