--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
       </ul>
     </div>
     <div class="main">
+      <a href="http://minjiepei.com/resume/%E9%97%B5%E7%9A%86%E4%BD%A9%20-%20%E5%89%8D%E7%AB%AF%E5%B7%A5%E7%A8%8B%E5%B8%88.pdf" target="_blank">PDF下载</a>
       <h2>项目信息</h2>
         <dl class="main-item">
           <i class="fa fa-star"></i><dt>短时信息存储</dt>
