对HTML结构和CSS代码均有修改
* main部分的dd里增加了ul，使内容显示更有条理
* sidebar的个人信息部分分类更细
* 把部分CSS子元素选择器改成了类名选择，效率更高
* 用strong和不同的颜色突出了一些专业名词

--- a/index.html
+++ b/index.html
@@ -3,112 +3,121 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
-  <meta name="description" content="闵皆佩 - 个人简历（前端工程师）">
-  <meta name="keywords" content="前端,简历,上海">
-  <meta name="author" content="vickymin,minjiepei@gmail.com">
+  <meta name="description" content="张仲来 - 个人简历（前端工程师）">
+  <meta name="keywords" content="前端,简历">
+  <meta name="author" content="seed-fe,zzlfullstack@gmail.com">
   <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport">
   <link rel="stylesheet" type="text/css" href="css/font-awesome/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
-  <title>闵皆佩 - 个人简历</title>
+  <title>张仲来 - 个人简历</title>
 </head>
 <body>
   <div class="container">
     <div class="sidebar">
-      <img src="avatar.jpg" alt="avatar-vicky">
-      <h1>闵皆佩</h1>
+      <img src="avatar.jpg" alt="avatar-zzl">
+      <h1>张仲来</h1>
       <ul class="sidebar-info">
         <li>
-          <dl class="sidebar-info-item">
-            <dt>联系方式</dt>
-            <dd><i class="fa fa-phone"></i><span>15921434749</span></dd>
-            <dd><i class="fa fa-envelope"></i><a href="mailto:minjiepei@gmail.com">minjiepei@gmail.com</a></dd>
-            <dd><i class="fa fa-github-square"></i><a href="https://github.com/vickymin" target="_blank">github.com/vickymin</a></dd>
+          <dl>
+            <dt class="sidebar-dt">联系方式</dt>
+            <dd class="sidebar-dd"><i class="fa fa-phone sidebar-i"></i><span>18110413021</span></dd>
+            <dd class="sidebar-dd"><i class="fa fa-envelope sidebar-i"></i><a class="sidebar-a" href="mailto:zzlfullstack@gmail.com">zzlfullstack@gmail.com</a></dd>
+            <dd class="sidebar-dd"><i class="fa fa-github-square sidebar-i"></i><a class="sidebar-a" href="https://github.com/seed-fe" target="_blank">github.com/seed-fe</a></dd>
           </dl>
         </li>
         <li>
-          <dl class="sidebar-info-item">
-            <dt>应聘职位</dt>
-            <dd><i class="fa fa-plug"></i>前端工程师</dd>
+          <dl>
+            <dt class="sidebar-dt">求职意向</dt>
+            <dd class="sidebar-dd"><i class="fa fa-plug sidebar-i"></i>Web前端开发工程师</dd>
           </dl>
         </li>
         <li>
-          <dl class="sidebar-info-item">
-            <dt>个人信息</dt>
-            <dd><i class="fa fa-university"></i><span>上海对外经贸大学</span></dd>
-            <dd><i class="fa fa-graduation-cap"></i><span>工商管理（本科）</span></dd>
-            <dd><i class="fa fa-file"></i><span>大学英语六级</span></dd>
-            <dd><i class="fa fa-thumb-tack"></i><span>2014年毕业</span></dd>
+          <dl>
+            <dt class="sidebar-dt">教育经历</dt>
+            <dd class="sidebar-dd"><i class="fa fa-university sidebar-i"></i><span>华中科技大学</span></dd>
+            <dd class="sidebar-dd"><i class="fa fa-graduation-cap sidebar-i"></i><span>物理电子学（硕士）</span></dd>
+            <dd class="sidebar-dd"><i class="fa fa-graduation-cap sidebar-i"></i><span>光电信息工程（本科）</span></dd>
+            <dd class="sidebar-dd"><i class="fa fa-thumb-tack sidebar-i"></i><span>2015年毕业</span></dd>
+          </dl>
+        </li>
+        <li>
+          <dl>
+            <dt class="sidebar-dt">英语水平</dt>
+            <dd class="sidebar-dd"><i class="fa fa-file sidebar-i"></i><span>大学英语六级<strong class="score">615</strong></span></dd>
+            <dd class="sidebar-dd"><i class="fa fa-file sidebar-i"></i><span>托业<strong class="score">875</strong></span></dd> 
           </dl>
         </li>
       </ul>
     </div>
     <div class="main">
-      <a href="http://minjiepei.com/resume/%E9%97%B5%E7%9A%86%E4%BD%A9%20-%20%E5%89%8D%E7%AB%AF%E5%B7%A5%E7%A8%8B%E5%B8%88.pdf" target="_blank">PDF下载</a>
+      <a id="download" href="" target="_blank">PDF下载</a>
       <h2>项目信息</h2>
-        <dl class="main-item">
-          <i class="fa fa-star"></i><dt>短时信息存储</dt>
-          <dd>
-            <p>一个简易的信息存储平台，支持多终端使用</p>
-            <p>express实现后端，用到了多个小插件以提升用户体验</p>
-            <p>
-              <a href="https://github.com/vickymin/save-message" class="main-item-link" target="_blank">Code</a>
-              <a href="http://120.26.199.177" class="main-item-link" target="_blank">Demo</a>
-            <p>
-          </dd>
-          <i class="fa fa-star"></i><dt>知乎仿写</dt>
-          <dd>
-            <p>仿照知乎的静态页面，实现了登录/注册界面，及首页的部分界面</p>
-            <p>参照了知乎的布局，使用Grunt辅助开发</p>
-            <p>
-              <a href="https://github.com/vickymin/zhihu" class="main-item-link" target="_blank">Code</a>
-              <a href="http://minjiepei.com/zhihu" class="main-item-link" target="_blank">Demo</a>
-            <p>
-          </dd>
-          <i class="fa fa-star"></i><dt>井字棋游戏</dt>
-          <dd>
-            <p>含单人和双人对战两种模式，后续计划完成AI部分</p>
-            <p>
-              <a href="https://github.com/vickymin/tictactoe" class="main-item-link" target="_blank">Code</a>
-              <a href="http://minjiepei.com/tictactoe" class="main-item-link" target="_blank">Demo</a>
-            </p>
-          </dd>
-          <i class="fa fa-star"></i><dt>动态方格生成</dt>
-          <dd>
-            <p>根据输入生成n*n的方格，点击每个方格会console出对应数字</p>
-            <p>用canvas实现</p>
-            <p>
-              <a href="https://github.com/vickymin/js-projects/tree/vickymin/101-clickable-grid" class="main-item-link" target="_blank">Code</a>
-              <a href="http://minjiepei.com/js-projects/101-clickable-grid/" class="main-item-link" target="_blank">Demo</a>
-            </p>
+        <dl>
+          <i class="fa fa-star"></i><dt class="main-dt">多人博客系统</dt>
+          <dd class="main-dd">
+            <ul class="main-ul">
+                <li class="main-li">简单的多人博客平台，支持注册/登录、发表/编辑/删除/评论（支持<strong>Markdown</strong>语法）、归档/标签</li>
+                <li class="main-li"><strong>express</strong>+<strong>MongoDb</strong>+<strong>ejs</strong>实现后端，支持会话，gzip压缩响应提升性能</li>
+                <li class="main-li"><strong>Bootstrap</strong>实现前端样式，注册/登录页面及导航条仿照知乎风格</li>
+                <li class="main-li"><strong>jQuery validation plugin</strong>插件实现前端表单验证</li>
+            </ul>
+            <div class="project-button">
+              <a href="https://github.com/seed-fe/blog" class="project-a" target="_blank">Code</a>
+              <a href="https://demo-bootstrap-blog.herokuapp.com/" class="project-a" target="_blank">Demo</a>
+            </div>    
           </dd>
         </dl>
       <h2>工作经历</h2>
-      <dl class="main-item">
-        <i class="fa fa-cog"></i><dt>卢森康卓汽车技术咨询（上海）有限公司（2014.6 - 2015.8）</dt>
-        <dd>
-          <p>主持公司例会，并做会议记录</p>
-          <p>员工报销，发票整理，办公用品采购</p>
-          <p>协助工程师跟进案件，与客户联络案件信息</p>
-          <p>翻译资料，协助招聘工作</p>
+      <dl>
+        <i class="fa fa-cog"></i><dt class="main-dt">合肥鑫晟光电科技有限公司（2015.7 - 2016.3）| 研究员</dt>
+        <dd class="main-dd">
+          <ul class="main-ul">
+            <li class="main-li">解析厂内和客户端反馈的产品不良，测试产品性能，调查产品履历，通过分析测试数据和回溯作业流程发掘造成产品不良的原因。</li>
+            <li class="main-li">与厂内品质和生产部门沟通，说明不良原因并提出改善方案。</li>
+            <li class="main-li">撰写不良解析报告。</li>
+          </ul>
         </dd>
       </dl>
       <h2>技能</h2>
-      <dl class="main-item">
-        <i class="fa fa-tag"></i><dt>HTML / CSS</dt>
-        <dd>
-          <p>根据设计稿实现页面，编写语义化的HTML</p>
-          <p>能够实现较复杂布局，有一定审美，了解Bootstrap，Sass</p>
+      <dl>
+        <i class="fa fa-tag"></i><dt class="main-dt"><strong>HTML</strong> / <strong>CSS</strong> / <strong>Bootstrap</strong></dt>
+        <dd class="main-dd">
+          <ul class="main-ul">
+            <li class="main-li">编写语义化的<strong>HTML</strong>，能熟练运用<strong>div</strong>/<strong>css</strong>排版布局。</li>
+            <li class="main-li">掌握<strong>Bootstrap</strong>响应式布局原理及常用组件的应用。</li>
+          </ul>
         </dd>
-        <i class="fa fa-tag"></i><dt>JavaScript</dt>
-        <dd>
-          <p>了解原生JavaScript，对jQuery无依赖</p>
+        <i class="fa fa-tag"></i><dt class="main-dt"><strong>JavaScript</strong> / <strong>jQuery</strong></dt>
+        <dd class="main-dd">
+          <ul class="main-ul">
+            <li class="main-li">了解原生<strong>JavaScript</strong>，能编写基本的<strong>DOM</strong>操作，交互事件绑定及动画特效代码。</li>
+            <li class="main-li">了解<strong>jQuery</strong>，能用<strong>jQuery</strong>完成基本的<strong>DOM</strong>操作，交互事件绑定及动画特效。</li>
+            <li class="main-li">理解<strong>Ajax</strong>。</li>
+          </ul>
         </dd>
-        <i class="fa fa-tag"></i><dt>其他</dt>
-        <dd>
-          <p>熟悉基本的git操作，日常使用Atom</p>
-          <p>会使用Grunt辅助开发</p>
-          <p>会使用Photoshop进行切图</p>
-          <p>略懂Java和Python</p>
+        <i class="fa fa-tag"></i><dt class="main-dt"><strong>Node.js</strong> / <strong>Express</strong></dt>
+        <dd class="main-dd">
+          <ul class="main-ul">
+            <li class="main-li">了解<strong>Node.js</strong>。</li>
+            <li class="main-li">理解<strong>express</strong>框架的<strong>MVC</strong>模式原理，掌握常用中间件的使用，掌握<strong>ejs</strong>模板语法。能搭建简单的后端程序与数据库交互，渲染模板.</li>
+          </ul>
+        </dd>
+        <i class="fa fa-tag"></i><dt class="main-dt">开发调试工具</dt>
+        <dd class="main-dd">
+          <ul class="main-ul">
+            <li class="main-li">Sublime编辑器的常用快捷键操作及插件使用。</li>
+            <li class="main-li">熟练使用<strong>Firebug</strong>/<strong>Chrome</strong>开发者工具查看页面<strong>HTML</strong>结构，调试样式和脚本，能用<strong>fiddler</strong>查看分析<strong>HTTP</strong>请求和响应。</li>
+            <li class="main-li">熟悉基本的<strong>git</strong>操作。</li>
+          </ul>
+        </dd>
+        <i class="fa fa-tag"></i><dt class="main-dt">其他。</dt>
+        <dd class="main-dd">
+          <ul class="main-ul">
+              <li class="main-li">理解计算机网络，掌握<strong>HTTP</strong>协议的基本知识。</li>
+              <li class="main-li">对前端性能优化和<strong>SEO</strong>略有了解。</li>
+              <li class="main-li">阅读英文技术文档无障碍。</li>
+              <li class="main-li">喜欢写技术博客总结自己对知识的理解。参见<a id="mooc" href="http://www.imooc.com/u/3254139/articles" target="_blank">慕课网手记</a>。能用<strong>Markdown</strong>书写。</li>
+          </ul>
         </dd>
       </dl>
     </div>
