修正了下载链接

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       </ul>
     </div>
     <div class="main">
-      <a id="download" href="/seed-fe/resume/raw/gh-pages/%E5%BC%A0%E4%BB%B2%E6%9D%A5%20-%20%E5%89%8D%E7%AB%AF%E5%B7%A5%E7%A8%8B%E5%B8%88.pdf" target="_blank">PDF下载</a>
+      <a id="download" href="https://github.com/seed-fe/resume/raw/gh-pages/%E5%BC%A0%E4%BB%B2%E6%9D%A5%20-%20%E5%89%8D%E7%AB%AF%E5%B7%A5%E7%A8%8B%E5%B8%88.pdf" target="_blank">PDF下载</a>
       <h2>项目信息</h2>
         <dl>
           <i class="fa fa-star"></i><dt class="main-dt">多人博客系统</dt>
