--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport">
   <link rel="stylesheet" type="text/css" href="css/font-awesome/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
-  <title>张仲来 - 个人简历</title>
+  <title>张仲来 - 前端工程师 - 个人简历</title>
 </head>
 <body>
   <div class="container">
@@ -50,7 +50,7 @@
       </ul>
     </div>
     <div class="main">
-      <a id="download" href="https://github.com/seed-fe/resume/raw/gh-pages/%E5%BC%A0%E4%BB%B2%E6%9D%A5%20-%20%E5%89%8D%E7%AB%AF%E5%B7%A5%E7%A8%8B%E5%B8%88.pdf" target="_blank">PDF下载</a>
+      <a id="download" href="https://github.com/seed-fe/resume/raw/gh-pages/%E5%BC%A0%E4%BB%B2%E6%9D%A5%20-%20%E5%89%8D%E7%AB%AF%E5%B7%A5%E7%A8%8B%E5%B8%88%20-%20%E4%B8%AA%E4%BA%BA%E7%AE%80%E5%8E%86.pdf" target="_blank">PDF下载</a>
       <h2>项目信息</h2>
         <dl>
           <i class="fa fa-star"></i><dt class="main-dt">多人博客系统</dt>
