--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@
       <img src="avatar.jpg" alt="avatar-zzl">
       <h1>张仲来</h1>
       <ul class="sidebar-info">
+         <li>
+          <dl>
+            <dt class="sidebar-dt">求职意向</dt>
+            <dd class="sidebar-dd"><i class="fa fa-plug sidebar-i"></i>Web前端开发工程师</dd>
+          </dl>
+        </li>
         <li>
           <dl>
             <dt class="sidebar-dt">联系方式</dt>
             <dd class="sidebar-dd"><i class="fa fa-phone sidebar-i"></i><span>18110413021</span></dd>
             <dd class="sidebar-dd"><i class="fa fa-envelope sidebar-i"></i><a class="sidebar-a" href="mailto:zzlfullstack@gmail.com">zzlfullstack@gmail.com</a></dd>
             <dd class="sidebar-dd"><i class="fa fa-github-square sidebar-i"></i><a class="sidebar-a" href="https://github.com/seed-fe" target="_blank">github.com/seed-fe</a></dd>
-          </dl>
-        </li>
-        <li>
-          <dl>
-            <dt class="sidebar-dt">求职意向</dt>
-            <dd class="sidebar-dd"><i class="fa fa-plug sidebar-i"></i>Web前端开发工程师</dd>
           </dl>
         </li>
         <li>
@@ -54,17 +54,17 @@
       <h2>项目信息</h2>
         <dl>
           <i class="fa fa-star"></i><dt class="main-dt">多人博客系统</dt>
+          <div class="project-button">
+              <a href="https://github.com/seed-fe/blog" class="project-a" target="_blank">Code</a>
+              <a href="https://demo-bootstrap-blog.herokuapp.com/" class="project-a" target="_blank">Demo</a>
+            </div>
           <dd class="main-dd">
             <ul class="main-ul">
                 <li class="main-li">简单的多人博客平台，支持注册/登录、发表/编辑/删除/评论（支持<strong>Markdown</strong>语法）、归档/标签</li>
                 <li class="main-li"><strong>express</strong>+<strong>MongoDb</strong>+<strong>ejs</strong>实现后端，支持会话，gzip压缩响应提升性能</li>
                 <li class="main-li"><strong>Bootstrap</strong>实现前端样式，注册/登录页面及导航条仿照知乎风格</li>
                 <li class="main-li"><strong>jQuery validation plugin</strong>插件实现前端表单验证</li>
-            </ul>
-            <div class="project-button">
-              <a href="https://github.com/seed-fe/blog" class="project-a" target="_blank">Code</a>
-              <a href="https://demo-bootstrap-blog.herokuapp.com/" class="project-a" target="_blank">Demo</a>
-            </div>    
+            </ul>    
           </dd>
         </dl>
       <h2>技能</h2>
@@ -105,7 +105,7 @@
               <li class="main-li">理解计算机网络，掌握<strong>HTTP</strong>协议的基本知识。</li>
               <li class="main-li">对前端性能优化和<strong>SEO</strong>略有了解。</li>
               <li class="main-li">阅读英文技术文档无障碍。</li>
-              <li class="main-li">喜欢写技术博客总结自己对知识的理解。参见<a id="mooc" href="http://www.imooc.com/u/3254139/articles" target="_blank">慕课网手记</a>。能用<strong>Markdown</strong>书写。</li>
+              <li class="main-li">个人技术文章：<a href="http://imooc.com/u/3254139/articles">http://www.imooc.com/u/3254139/articles</a></li>
           </ul>
         </dd>
       </dl>
