增加了IE的启动和chrome对中文字体显示的修改
*  gulp里增加了Browsersync启动IE的代码
* index.html里删除了lang="zh-CN"，防止chrome对中文使用系统默认的宋体

--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html>
+<!-- 这里如果加了lang="zh-CN", chrome里的中文字体就会用默认的宋体，firefox和IE不会 -->
+<!-- <html lang="zh-CN"> -->
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
