增加了项目信息和技能

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<!-- 这里如果加了lang="zh-CN", chrome里的中文字体就会用默认的宋体，firefox和IE不会 -->
+<!-- 这里如果加了lang="zh-CN", chrome里的中文字体就会用系统默认的宋体，firefox和IE不会 -->
 <!-- <html lang="zh-CN"> -->
 <head>
   <meta charset="UTF-8">
@@ -64,8 +64,20 @@
             <ul class="main-ul">
                 <li class="main-li">简单的多人博客平台，支持注册/登录、发表/编辑/删除/评论（支持<strong>Markdown</strong>语法）、归档/标签</li>
                 <li class="main-li"><strong>express</strong>+<strong>MongoDb</strong>+<strong>ejs</strong>实现后端，支持会话，gzip压缩响应提升性能</li>
-                <li class="main-li"><strong>Bootstrap</strong>实现前端样式，注册/登录页面及导航条仿照知乎风格</li>
+                <li class="main-li"><strong>Bootstrap</strong>实现前端样式，响应式布局，注册/登录页面及导航条仿照知乎风格</li>
                 <li class="main-li"><strong>jQuery validation plugin</strong>插件实现前端表单验证</li>
+            </ul>    
+          </dd>
+          <i class="fa fa-star"></i><dt class="main-dt">由psd切图完成的静态页面</dt>
+          <div class="project-button">
+              <a href="https://github.com/seed-fe/psd-html" class="project-a" target="_blank">Code</a>
+              <a href="https://seed-fe.github.io/psd-html/" class="project-a" target="_blank">Demo</a>
+            </div>
+          <dd class="main-dd">
+            <ul class="main-ul">
+                <li class="main-li">用<strong>Photoshop</strong>完成psd素材的精确切图以及小图标<strong>CSS Sprite</strong>雪碧图的制作</li>
+                <li class="main-li">用<strong>CSS3</strong>变形和过渡给图片添加了动画效果</li>
+                <li class="main-li"><strong>Gulp</strong>+<strong>Browsersync</strong>辅助开发</li>
             </ul>    
           </dd>
         </dl>
@@ -74,7 +86,7 @@
         <i class="fa fa-tag"></i><dt class="main-dt"><strong>HTML</strong> / <strong>CSS</strong> / <strong>Bootstrap</strong></dt>
         <dd class="main-dd">
           <ul class="main-ul">
-            <li class="main-li">编写语义化的<strong>HTML</strong>，能熟练运用<strong>div</strong>/<strong>css</strong>排版布局。</li>
+            <li class="main-li">能根据psd设计稿切图实现页面，用<strong>HTML5</strong>新标签编写语义化的<strong>HTML</strong>，能熟练运用<strong>div</strong>/<strong>css</strong>排版布局，能用<strong>CSS3</strong>新特性制作动画。</li>
             <li class="main-li">掌握<strong>Bootstrap</strong>响应式布局原理及常用组件的应用。</li>
           </ul>
         </dd>
@@ -98,7 +110,7 @@
           <ul class="main-ul">
             <li class="main-li"><strong>Sublime</strong>编辑器的常用快捷键操作及插件使用。能用<strong>gulp</strong>辅助开发。</li>
             <li class="main-li">熟练使用<strong>Firebug</strong>/<strong>Chrome</strong>开发者工具查看页面<strong>HTML</strong>结构，调试样式和脚本，能用<strong>fiddler</strong>查看分析<strong>HTTP</strong>请求和响应。</li>
-            <li class="main-li">熟悉基本的<strong>git</strong>操作。</li>
+            <li class="main-li">熟悉基本的<strong>git</strong>操作。能用<strong>Photoshop</strong>熟练切图。</li>
           </ul>
         </dd>
         <i class="fa fa-tag"></i><dt class="main-dt">其他。</dt>
@@ -111,7 +123,7 @@
           </ul>
         </dd>
       </dl>
-      <h2>工作经历</h2>
+      <!-- <h2>工作经历</h2>
       <dl>
         <i class="fa fa-cog"></i><dt class="main-dt">合肥鑫晟光电科技有限公司（2015.7 - 2016.3）| 研究员</dt>
         <dd class="main-dd">
@@ -121,7 +133,7 @@
             <li class="main-li">撰写不良解析报告。</li>
           </ul>
         </dd>
-      </dl>
+      </dl> -->
     </div>
   </div>
   <script>
