--- a/index.html
+++ b/index.html
@@ -68,15 +68,15 @@
                 <li class="main-li"><strong>jQuery validation plugin</strong>插件实现前端表单验证</li>
             </ul>    
           </dd>
-          <i class="fa fa-star"></i><dt class="main-dt">由psd切图完成的静态页面</dt>
+          <i class="fa fa-star"></i><dt class="main-dt">由psd设计稿切图重构完成的单页面应用</dt>
           <div class="project-button">
               <a href="https://github.com/seed-fe/psd-html" class="project-a" target="_blank">Code</a>
               <a href="https://seed-fe.github.io/psd-html/" class="project-a" target="_blank">Demo</a>
             </div>
           <dd class="main-dd">
             <ul class="main-ul">
-                <li class="main-li">用<strong>Photoshop</strong>完成psd素材的精确切图以及小图标<strong>CSS Sprite</strong>雪碧图的制作</li>
-                <li class="main-li">用<strong>CSS3</strong>变形和过渡给图片添加了动画效果</li>
+                <li class="main-li">用<strong>Photoshop</strong>完成psd设计稿的精确切图以及页面重构，小图标用<strong>CSS Sprite</strong>减少HTTP请求</li>
+                <li class="main-li">用<strong>fullpage.js</strong>和<strong>move.js</strong>插件将页面制作成单页应用，通过图片<strong>延迟加载</strong>提升页面加载速度，用<strong>unslider</strong>实现了轮播，用<strong>CSS3</strong>变形和过渡给图片添加了动画效果</li>
                 <li class="main-li"><strong>Gulp</strong>+<strong>Browsersync</strong>辅助开发</li>
             </ul>    
           </dd>
@@ -109,7 +109,7 @@
         <dd class="main-dd">
           <ul class="main-ul">
             <li class="main-li"><strong>Sublime</strong>编辑器的常用快捷键操作及插件使用。能用<strong>gulp</strong>辅助开发。</li>
-            <li class="main-li">熟练使用<strong>Firebug</strong>/<strong>Chrome</strong>开发者工具查看页面<strong>HTML</strong>结构，调试样式和脚本，能用<strong>fiddler</strong>查看分析<strong>HTTP</strong>请求和响应。</li>
+            <li class="main-li">熟练使用<strong>Firebug</strong>/<strong>Chrome</strong>开发者工具在PC和移动设备上查看页面<strong>HTML</strong>结构，调试样式和脚本，能用<strong>fiddler</strong>查看分析<strong>HTTP</strong>请求和响应。</li>
             <li class="main-li">熟悉基本的<strong>git</strong>操作。能用<strong>Photoshop</strong>熟练切图。</li>
           </ul>
         </dd>
