gulp改进工作流
通过gulp改进工作流分成了开发阶段和发布阶段

--- a/src/index.html
+++ b/src/index.html
@@ -9,14 +9,14 @@
   <meta name="keywords" content="前端,简历">
   <meta name="author" content="seed-fe,zzlfullstack@gmail.com">
   <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport">
-  <link rel="stylesheet" type="text/css" href="css/font-awesome/css/font-awesome.min.css">
+  <link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <title>张仲来 - 前端工程师 - 个人简历</title>
 </head>
 <body>
   <div class="container">
     <div class="sidebar">
-      <img src="avatar.jpg" alt="avatar-zzl">
+      <img src="image/avatar.jpg" alt="avatar-zzl">
       <h1>张仲来</h1>
       <ul class="sidebar-info">
          <li>
@@ -77,7 +77,7 @@
             <ul class="main-ul">
                 <li class="main-li">用<strong>Photoshop</strong>完成psd设计稿的精确切图以及页面重构，小图标用<strong>CSS Sprite</strong>减少HTTP请求</li>
                 <li class="main-li">用<strong>fullpage.js</strong>和<strong>move.js</strong>插件将页面制作成单页应用，通过图片<strong>延迟加载</strong>提升页面加载速度，用<strong>unslider</strong>实现了轮播，用<strong>CSS3</strong>变形和过渡给图片添加了动画效果</li>
-                <li class="main-li"><strong>Gulp</strong>+<strong>Browsersync</strong>辅助开发</li>
+                <li class="main-li"><strong>Gulp</strong>+<strong>Browsersync</strong>辅助开发，完成CSS、js和图片文件的压缩，自动化工作流</li>
             </ul>    
           </dd>
         </dl>
@@ -108,7 +108,7 @@
         <i class="fa fa-tag"></i><dt class="main-dt">开发调试工具</dt>
         <dd class="main-dd">
           <ul class="main-ul">
-            <li class="main-li"><strong>Sublime</strong>编辑器的常用快捷键操作及插件使用。能用<strong>gulp</strong>辅助开发。</li>
+            <li class="main-li"><strong>Sublime</strong>编辑器的常用快捷键操作及插件使用。能用<strong>gulp</strong>辅助开发并改进工作流。</li>
             <li class="main-li">熟练使用<strong>Firebug</strong>/<strong>Chrome</strong>开发者工具在PC和移动设备上查看页面<strong>HTML</strong>结构，调试样式和脚本，能用<strong>fiddler</strong>查看分析<strong>HTTP</strong>请求和响应。</li>
             <li class="main-li">熟悉基本的<strong>git</strong>操作。能用<strong>Photoshop</strong>熟练切图。</li>
           </ul>
@@ -117,7 +117,7 @@
         <dd class="main-dd">
           <ul class="main-ul">
               <li class="main-li">理解计算机网络，掌握<strong>HTTP</strong>协议的基本知识。</li>
-              <li class="main-li">对前端性能优化和<strong>SEO</strong>略有了解。</li>
+              <li class="main-li">对前端性能优化和<strong>SEO</strong>有了解。</li>
               <li class="main-li">阅读英文技术文档无障碍。</li>
               <li class="main-li">个人技术文章：<a href="http://imooc.com/u/3254139/articles">http://www.imooc.com/u/3254139/articles</a></li>
           </ul>
